--- a/dingding.cfg
+++ b/dingding.cfg
@@ -1,6 +1,6 @@
 [ADB]
 # adb install path
-directory = r"D:\Program Files (x86)\ClockworkMod\Universal Adb Driver"
+directory = D:\Program Files (x86)\ClockworkMod\Universal Adb Driver
 [time]
 #  go work time  if you are 9  here need  add 8
 go_hour = 8
@@ -8,15 +8,15 @@ go_hour = 8
 back_hour = 18
 [email]
 # send person
-sender = '1414044032@qq.com'
+sender = 1414044032@qq.com
 # password  Generally, third party login is required authorization code
-psw = 'asdsadasdwqwqwqw'
+psw = 1213123123131312312121
 # recevie  here It could be yourself
-receive = '1414044032@qq.com'
+receive = 1414044032@qq.com
 
 [screen]
 # Screen shot image path (do not include Spaces in the path, in order to save the screen shot sent by the phone, and save it in the email)
-screen_dir = "D:\screen.png"
+screen_dir = D:\screen.png
 # Touch the screen on a series of coordinates.
 [position]
 # Slide to unlock
