新增短信通知版本，百度OCR识别文字，短信字数有限制，可能造成上班打卡没有发送成功。解决方法。修改上班时，发送短信的字数。

--- a/Versions_2/dingding.cfg
+++ b/Versions_2/dingding.cfg
@@ -10,7 +10,7 @@ back_hour = 18
 # send person
 sender = 1414044032@qq.com
 # password  Generally, third party login is required authorization code
-psw = 1213123123131312312121
+psw = 69
 # recevie  here It could be yourself
 receive = 1414044032@qq.com
 
@@ -20,10 +20,25 @@ screen_dir = D:\screen.png
 # Touch the screen on a series of coordinates.
 [position]
 # Slide to unlock
-light_position = "300 1000 300 500"
+light_position = 300 1000 300 500
 # Click "work"
-work_position = "359 1226"
+work_position = 359 1226
 # Click "time check"
-check_position = "450 893"
+check_position = 450 893
 # Click on "off duty"
-play_position = "365 905"
+play_position = 365 905
+# send shotmessage by twilio
+[twilio]
+# account
+account = 369
+# token
+token = 669
+# receive phone number
+to = +3699
+# twilio tree phone number in your console
+from = +36636
+# baidu image2text api
+[baidu]
+APP_ID = 123
+API_KEY = 23
+SECRET_KEY = 363
