coordinate need not quotation marks

--- a/Versions_1/dingding.cfg
+++ b/Versions_1/dingding.cfg
@@ -20,10 +20,10 @@ screen_dir = D:\screen.png
 # Touch the screen on a series of coordinates.
 [position]
 # Slide to unlock
-light_position = "300 1000 300 500"
+light_position = 300 1000 300 500
 # Click "work"
-work_position = "359 1226"
+work_position = 359 1226
 # Click "time check"
-check_position = "450 893"
+check_position = 450 893
 # Click on "off duty"
-play_position = "365 905"
+play_position = 365 905
