自动生成配置

--- a/Versions_1/dingding.cfg
+++ b/Versions_1/dingding.cfg
@@ -1,9 +1,9 @@
 [ADB]
 # adb install path
-directory = D:\Program Files (x86)\ClockworkMod\Universal Adb Driver
+directory = D:\Program Files (x86)
 [time]
 #  go work time  if you are 9  here need  add 8
-go_hour = 8
+go_hour = 17
 # back work time if you are 18 here need add 18
 back_hour = 18
 [email]
